--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
   - 3.6
 
 install: pip install -r requirements.txt
-script: python -m unittest discover
+script: python -m unittest discover -v
